// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AllocatedWorkers component should render properly - with deallocate button 1`] = `
<DocumentFragment>
  <div>
    <section
      class="govuk-!-margin-bottom-8"
    >
      <div
        class="heading"
      >
        <h3>
          Officer Name
        </h3>
        <a
          class="lbh-link"
          href="/path/2/remove"
        >
          Deallocate
        </a>
      </div>
      <dl
        class="govuk-summary-list"
      >
        <div
          class="govuk-summary-list__row"
        >
          <dt
            class="govuk-summary-list__key"
          >
            Team
          </dt>
          <dd
            class="govuk-summary-list__value"
          >
            Safeguarding and Reviewing Team
          </dd>
        </div>
        <div
          class="govuk-summary-list__row"
        >
          <dt
            class="govuk-summary-list__key"
          >
            Role
          </dt>
          <dd
            class="govuk-summary-list__value"
          >
            Consultant Social Worker
          </dd>
        </div>
        <div
          class="govuk-summary-list__row"
        >
          <dt
            class="govuk-summary-list__key"
          >
            Start date
          </dt>
          <dd
            class="govuk-summary-list__value"
          >
            28/03/2019
          </dd>
        </div>
        <div
          class="govuk-summary-list__row"
        >
          <dt
            class="govuk-summary-list__key"
          >
            End date
          </dt>
          <dd
            class="govuk-summary-list__value"
          >
            28/03/2019
          </dd>
        </div>
      </dl>
    </section>
  </div>
</DocumentFragment>
`;

exports[`AllocatedWorkers component should render properly 1`] = `
<DocumentFragment>
  <div>
    <section
      class="govuk-!-margin-bottom-8"
    >
      <div
        class="heading"
      >
        <h3>
          Officer Name
        </h3>
      </div>
      <dl
        class="govuk-summary-list"
      >
        <div
          class="govuk-summary-list__row"
        >
          <dt
            class="govuk-summary-list__key"
          >
            Team
          </dt>
          <dd
            class="govuk-summary-list__value"
          >
            Safeguarding and Reviewing Team
          </dd>
        </div>
        <div
          class="govuk-summary-list__row"
        >
          <dt
            class="govuk-summary-list__key"
          >
            Role
          </dt>
          <dd
            class="govuk-summary-list__value"
          >
            Consultant Social Worker
          </dd>
        </div>
        <div
          class="govuk-summary-list__row"
        >
          <dt
            class="govuk-summary-list__key"
          >
            Start date
          </dt>
          <dd
            class="govuk-summary-list__value"
          >
            28/03/2019
          </dd>
        </div>
        <div
          class="govuk-summary-list__row"
        >
          <dt
            class="govuk-summary-list__key"
          >
            End date
          </dt>
          <dd
            class="govuk-summary-list__value"
          >
            28/03/2019
          </dd>
        </div>
      </dl>
    </section>
  </div>
</DocumentFragment>
`;
